# Peer-Review-Platform-Backend

./: .gitignore  Cargo.toml  README.md  Rocket.toml  build.rs
.github/workflows/: rust.yml
backend_macro_derive/: Cargo.toml
backend_macro_derive/src/: lib.rs
migrations/2021-04-24-154644_create_users/: up.sql
migrations/2021-05-17-144723_create_workshops/: down.sql  up.sql
migrations/2021-05-23-182848_create_submissions/: up.sql
migrations/2021-09-30-172358_create_ws_attachments/: up.sql
migrations/2021-12-30-095125_update_workshop_submission/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/auth/: auth.rs  crypto.rs
src/cors/: cors.rs
src/db/: attachments.rs  migration.rs  mod.rs  posts.rs  reviews.rs  submissions.rs  todos.rs  users.rs  workshops.rs
src/db/error/: error.rs
src/db/migration/: migration.rs  mod.rs
src/db/models/: mod.rs  models.rs
src/routes/: attachments.rs  db.rs  mod.rs  model.rs  models.rs  students.rs  submissions.rs  teacher.rs  teachers.rs  test.rs  users.rs
src/routes/error/: error.rs
src/routes/models/: mod.rs  models.rs  validation.rs
src/routes/validation/: catcher.rs  mod.rs  validation.rs
src/utils/: error.rs  json.rs  mod.rs  path.rs
tests/integration/: Rocket.postman_collection.json
