[package]
name = "iprp-backend"
version = "0.1.0"
authors = ["Kacper Urbaniec <at.kacper.urbaniec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
diesel = { version = "1.4.4", features = ["mysql", "chrono"] }
diesel_migrations = "1.4.0"
diesel-derive-enum = { version = "1.1.1", features = ["mysql"] }
chrono = { version = "0.4", features = ["serde"] }
rocket-multipart-form-data = "0.9.6"
rocket_cors = "0.5.2"
rust-crypto = "0.2.36"
serde = "1.0.125"
serde_json = "1.0"
serde_derive = "1.0.125"
base64 = "0.13.0"
validator = { version = "0.12", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_mysql_pool", "json"]