[package]
name = "backend_macro_derive"
version = "0.1.0"
authors = ["Kacper Urbaniec <at.kacper.urbaniec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See: https://doc.rust-lang.org/reference/procedural-macros.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"